--- a/MedAssistance/index.html
+++ b/MedAssistance/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="https://public-frontend-cos.metadl.com/mgx/img/favicon.png" type="image/png">
+<link rel="icon" href="/favicon.ico" />
   <title>MedAssist - Patient Education & Support</title>
   <meta name="description" content="A virtual patient assistant for medical education and support" />
   <meta name="author" content="MedAssist Team" />
